--- a/src/home/degrade.html
+++ b/src/home/degrade.html
@@ -6,6 +6,6 @@
         <title>VIOLET</title>
     </head>
     <body>
-        <div id="demo-app"></div>
+        <div id="app"></div>
     </body>
 </html>
