--- a/src/home/degrade.html
+++ b/src/home/degrade.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
+        <meta name="viewport"
+            content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
         <title>Welcome to UgliFan's home.</title>
         <script>
-            function setFontSize () {
+            function setFontSize() {
                 var design = 750,
                     font = 100,
                     result = null,
@@ -39,6 +40,19 @@
             setFontSize();
             window.addEventListener('resize', setFontSize, false);
         </script>
+        <style>
+            #cas {
+                position: absolute;
+                left: 0;
+                top: 0;
+                bottom: 0;
+                right: 0;
+                margin: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 0;
+            }
+        </style>
     </head>
     <body>
         <div id="app"></div>
